fix viewport issue on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+html{
+  height:-webkit-fill-available
+}
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
+  height:-webkit-fill-available
 }
 
 a {
